Pagina sin condiciones Iniciales con logica

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,8 +8,8 @@
 
 <ion-content padding>
  
-  <button> Evento
-
-  </button>
+ 
+  <button ion-button color="danger" block (click)="goToSinInicialPage()"> sin Condiciones </button>
+  <button ion-button color="danger" block (click)="goToConInicialPage()"> Condiciones Inciales </button>
  
 </ion-content>
