Iconos + y -, imagenes, falta terminar el algoritmo y trabajar en el diseño

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,15 +1,72 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
+
+<ion-content padding style="background-image: url('assets/imgs/banner.png');
+background-repeat: no-repeat;
+background-size:cover;">
+<ion-grid>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  <ion-row><ion-col col-12 ></ion-col></ion-row>
+  
+  <ion-row>
+    
+    <ion-col col-3 ></ion-col>
+    <ion-col col-6 >
+        <button ion-button color="light" outline (click)="goToSinInicialPage()">sin Condiciones </button>
+        <button ion-button color="light" outline (click)="goToConInicialPage()">Condiciones Inciales </button>
+    </ion-col>
+    <ion-col col-3 ></ion-col>
+  </ion-row>
+</ion-grid>
  
  
-  <button ion-button color="danger" block (click)="goToSinInicialPage()"> sin Condiciones </button>
-  <button ion-button color="danger" block (click)="goToConInicialPage()"> Condiciones Inciales </button>
+  
  
 </ion-content>
