--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,72 +1,17 @@
 
 
-<ion-content padding style="background-image: url('assets/imgs/banner.png');
+<ion-content padding style="background-image: url('assets/imgs/logoDisenio.png');
 background-repeat: no-repeat;
-background-size:cover;">
-<ion-grid>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
-  <ion-row><ion-col col-12 ></ion-col></ion-row>
+background-size:cover;background-position: center;
+background-size: contain;">
   
-  <ion-row>
+
+    <button style="margin-top: 450px;margin-left: 25%;width: max-content;margin-right: 25%;" ion-button color="light" outline (click)="goToSinInicialPage()"><h6>Sin Condiciones</h6> </button>
+    <button style="margin-left: 25%;width: max-content;margin-right: 25%;" ion-button color="light" outline (click)="goToConInicialPage()"><h6>Con Condiciones</h6> </button>
+
+ 
     
-    <ion-col col-3 ></ion-col>
-    <ion-col col-6 >
-        <button ion-button color="light" outline (click)="goToSinInicialPage()">sin Condiciones </button>
-        <button ion-button color="light" outline (click)="goToConInicialPage()">Condiciones Inciales </button>
-    </ion-col>
-    <ion-col col-3 ></ion-col>
-  </ion-row>
-</ion-grid>
- 
- 
+
   
  
 </ion-content>
